--- a/chart.css
+++ b/chart.css
@@ -14,9 +14,6 @@ strong.select2-results__group {
     display: block;
     padding: 6px;
 }
-body {
-	font-family: Arial;
-}
 
 .axis path,
 .axis line {
@@ -31,7 +28,9 @@ text .tick {fill: #D9D9D9; }
 	font-size: 12px;
 	text-anchor: middle;
 }
-
+circle {
+    cursor: pointer;
+}
 .dot {
   z-index: 98;
 }
@@ -67,7 +66,8 @@ div.tooltip {
 }
 
 .triangle {
-    fill: #D9D9D9;
+    fill:#D9D9D9;
+
 }
 
 #logo {
@@ -78,41 +78,48 @@ div.tooltip {
 	width: 140px;
 }
 
-.quadrantText {
-	fill: #D9D9D9;
-	font-size: 36px;
-}
+
 
 .controls {
-	height:	40px;
-	width: 400px;
+    height:	40px;
+    position:relative;
 }
 
 .button {
-    background-color: #BB133E;
-    border: 2px solid #BB133E;
+    cursor: pointer;
+    background-color: #DDD;
+    border: 2px solid #DDD;
     color: white;
-    padding: 5px 32px;
+    padding: 2px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 12px;
-    border-radius: 8px;
-    border: 2px solid #BB133E;
+	font-size: 12px;
+    border-radius: 4px;
     -webkit-transition-duration: 0.3s; /* Safari */
     transition-duration: 0.3s;
-    width:80px;
+    width:13%;
     position:relative;
-    left:360px;
-    top:-28px;
+    left:10px;
+    text-align: center;
+    /* top:-28px; */
 }
-
+/* 
 .button:hover {
 	background-color: white;
-	color: #BB133E;
-	cursor: pointer;
+	color: #DDD;
+} */
+
+.buttonActive {
+    background-color: #BB133E;
+    border: 2px solid #BB133E;
 }
 
+.buttonActive:hover {
+    background-color: white;
+	color: #BB133E;
+
+}
 #legendDesc {
     font-size: 12px;
     font-weight: bold;
@@ -134,9 +141,9 @@ div.tooltip {
     fill-opacity:0.2;
 }
 
-.searchbox {
+/* .searchbox {
 	width: 350px;
-}
+} */
 .searchbox-container {
 	border:2px solid #BB133E;
 }
@@ -153,8 +160,11 @@ div.tooltip {
 #searchdiv {
 	display:block;
 }
-.select2-container {
-    width: 200px;
+
+.chartDiv {
+    position: relative;
+    width: 100%;
+    font-size: 1vw;
 }
 
 .selected {
@@ -170,16 +180,48 @@ h2 {
 	margin: 5px;
 }
 
-#descBox {
-	position: relative;
-	margin-top:20px;
-	display: none;
-	font-size: 14px;
-	background-color: #D1D4D3;
-	width: 505px;
-	border-radius:8px;
-	padding:8px;
+.box {
+    display: block;
+    position: absolute;
+    text-align: center;
+    width: 40%;
+	font-size: 13px;
+    border-radius:8px;
+	padding:12px;
+    left:60%;
 }
+#storyBox {
+    margin-top:50px;
+    top:0%;
+    height:40%;
+	background-color:rgba(127,179,217,.3);
+    left:60%;
+
+
+}
+#descBox {
+    top:55%;
+    height:40%;
+    background-color:rgba(221,221,221,.33);
+
+
+}
+/* 
+#rstBtn {
+    position: absolute;
+    display: block;
+    cursor: pointer;
+    width:10%;
+    border:0px;
+    color: #BB133E;
+    text-align: center;
+    left:90%;
+}
+ */
+#rstBtn:hover{
+    font-weight: bold;
+}
+
 
 #closeDescLink {
 	position:relative;
