--- a/css.css
+++ b/css.css
@@ -23,6 +23,7 @@ body {
 
 
 #content {
+    position: relative;
     max-width: 1000px;
     margin:auto;
 }
@@ -48,6 +49,7 @@ h2 {
 }
 
 .wrap {
+    /* position: absolute; */
     width: 100%;
     height: 100%;
     margin:0px;
@@ -56,7 +58,7 @@ h2 {
 }
 
 #headers {
-    position: absolute;
+    position: relative;
     top:15%;
     left:50%;
     margin:auto;
@@ -111,6 +113,7 @@ h2 {
 }
 .slide {
     /* position:absolute; */
+    display: block;
     margin:0px;
     width:100%;
     padding: 50px;
@@ -129,8 +132,6 @@ h2 {
     margin-bottom: 50px;
     color:#bb133e;
 }
-
-
 
 
 
