--- a/css/chart.css
+++ b/css/chart.css
@@ -5,6 +5,7 @@
 
 #svg {
     font-family: Arial, Helvetica, sans-serif;
+    background-color:white;
 }
 
 #svg text {
@@ -59,7 +60,7 @@ div.tooltip {
 }
 
 .triangle {
-    fill:#E8EAE9;
+    fill:#D9D9D9;
 }
 
 .controls {
@@ -124,8 +125,12 @@ div.tooltip {
 .chartDiv {
     position: relative;
     width: 100%;
+    background-color:white;
+    height:100vh;
+    box-sizing: border-box;
     /* font-size: 1vw; */
-    padding-top:10vh;
+    /* padding-top:10vh; */
+    padding:10vh;
     /* background-color:white; */
 }
 
