--- a/css/page (DESKTOP-KN12OD3's conflicted copy 2018-05-22).css
+++ b/css/page (DESKTOP-KN12OD3's conflicted copy 2018-05-22).css
@@ -52,7 +52,7 @@ h3{
     position:fixed;
     overflow-x:auto;
     z-index: 1;
-    background-color:white;
+    background-color:#E8EAE9;
     opacity:0;
 }
 .fixactive {
@@ -82,15 +82,9 @@ h3{
     width:100%;
     margin:auto;
     z-index: 2;
-    background-color: white;
+    background-color: white;  /* BLUE CHANGED */
     padding-top:50px;
     padding-bottom:100px;
-    /* border-bottom:2px solid #d1d4d3;
-    border-top:2px solid #d1d4d3; */
-
-    box-shadow: 0px 0px 20px 4px #d1d4d3;
-    /* border-top:15px solid #d1d4d3; */
-
 }
 
 /* MENU */
@@ -98,16 +92,14 @@ h3{
     padding-top:15px;
     z-index: 5;
     width:100%;
-    height:5vh;
+    height:7vh;
     background-color:white;
-    /* box-shadow: 0px 0px 20px 4px #d1d4d3; */
-
 }
 #menuempty {
     display:none;
     padding-top:15px;
     width: 100%;
-    height: 5vh;
+    height: 7vh;
 }
 
 
@@ -153,8 +145,6 @@ h3{
     background-color: #E8EAE9;
     opacity:1;
     z-index: 1;
-    box-shadow: 0px 0px 20px 4px #d1d4d3;
-
 }
 
 .detailbox {
@@ -210,7 +200,8 @@ h3{
 }
 
 #app {
-    /* background-color:rgba(127,179,217,.3); */
+    /* background-color:rgba(127,179,217,.3); BLUE CHANGED */
+    background-color:white;
 }
 
 #dyk_wrap {
