--- a/css/page.css
+++ b/css/page.css
@@ -19,9 +19,6 @@ body {
     margin:auto;
 }
 
-.bg-grey {
-    background-color:#E8EAE9;
-}
 
 .logo {
     height: 25px;
@@ -81,7 +78,7 @@ h3{
     position:relative;
     width:100%;
     margin:auto;
-    z-index: 2;
+    z-index: 3;
     background-color: white;
     padding-top:50px;
     padding-bottom:100px;
@@ -134,8 +131,17 @@ h3{
     position: fixed;
     top:0px;
     width: 100%;
+    z-index: 5;
 }
+.stickyshadow {
+    position: fixed;
+    top:0px;
+    height: 6vh;
+    width: 100%;
+    z-index: 2;
+    box-shadow: 0px 0px 20px 4px #d1d4d3;
 
+}
 
 /* INFOBOXES */
 .box {
@@ -144,7 +150,7 @@ h3{
     position: absolute;
     /* font-size: 13px; */
     width:400px;
-    z-index:2;
+    z-index: 2;
 }
 
 .helpbox {
@@ -152,7 +158,6 @@ h3{
     /* left set dynamically in generateElementStructure() */
     background-color: #E8EAE9;
     opacity:1;
-    z-index: 1;
     box-shadow: 0px 0px 20px 4px #d1d4d3;
 
 }
@@ -161,7 +166,6 @@ h3{
     background-color:rgba(127,179,217,.3);
     /* left set in openDescBox() according to .helpbox */
     /* width:25vw; */
-    z-index:5;
     top:0px;
     right:0px;
 }
