--- a/css/page.css
+++ b/css/page.css
@@ -43,6 +43,36 @@ h3{
     margin:0px;
 }
 
+h4 {
+    text-align: center;
+}
+
+.col {
+    box-sizing: border-box;
+    float: left;
+    width: 50%;
+    padding:15px;
+}
+
+.flowimage {
+    width:100%;
+
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.tip {
+    padding-left:50px;
+    font-style: italic;
+    border-left:5px solid #bb133e;
+}
+
+
 
 /* FIXED CONTENT */
 .fix {
@@ -136,7 +166,7 @@ h3{
 .stickyshadow {
     position: fixed;
     top:0px;
-    height: 6vh;
+    height:7vh;
     width: 100%;
     z-index: 2;
     box-shadow: 0px 0px 20px 4px #d1d4d3;
@@ -145,30 +175,33 @@ h3{
 
 /* INFOBOXES */
 .box {
+    top:0px;
     border-radius: 8px;
     padding:15px;
     position: absolute;
-    /* font-size: 13px; */
+    font-size:calc(12px + .2vh); 
     width:400px;
     z-index: 2;
+    box-shadow: 0px 0px 20px 4px #d1d4d3
 }
 
 .helpbox {
-    top:0px;
     /* left set dynamically in generateElementStructure() */
-    background-color: #E8EAE9;
+    background-color: rgba(127,179,217,.3);;
     opacity:1;
-    box-shadow: 0px 0px 20px 4px #d1d4d3;
-
 }
 
 .detailbox {
-    background-color:rgba(127,179,217,.3);
+    background-color:rgba(187,19,62,.3);
     /* left set in openDescBox() according to .helpbox */
-    /* width:25vw; */
-    top:0px;
-    right:0px;
 }
+
+.whitebox {
+    background-color:white;
+    width:550px;
+    font-size:calc(12px + .5vh); 
+}
+
 
 #closedescbox {
     cursor:pointer;
@@ -200,10 +233,14 @@ h3{
 }
 
 #thanks {
+    
     background-color:#E8EAE9;
     text-align:center;
     padding-top:13vh;
     color: black;
+    height:90vh;
+    box-sizing: border-box;
+
 }
 
 #shares img {
