--- a/css/page.css
+++ b/css/page.css
@@ -21,8 +21,8 @@ body {
 
 
 .logo {
-    height: 25px;
-    margin:50px;
+    width: 150px;
+    margin:20px 50px 20px 50px;
 }
 
 h1 {
@@ -72,7 +72,9 @@ h4 {
     border-left:5px solid #bb133e;
 }
 
-
+#logos {
+    vertical-align: center;
+}
 
 /* FIXED CONTENT */
 .fix {
@@ -110,8 +112,8 @@ h4 {
     margin:auto;
     z-index: 3;
     background-color: white;
-    padding-top:50px;
-    padding-bottom:100px;
+    padding-top:10vh;
+    padding-bottom:10vh;
     /* border-bottom:2px solid #d1d4d3;
     border-top:2px solid #d1d4d3; */
 
@@ -125,7 +127,7 @@ h4 {
     padding-top:15px;
     z-index: 5;
     width:100%;
-    height:5vh;
+    height:calc(22px + .5vh);
     background-color:white;
     /* box-shadow: 0px 0px 20px 4px #d1d4d3; */
 
@@ -134,7 +136,7 @@ h4 {
     display:none;
     padding-top:15px;
     width: 100%;
-    height: 5vh;
+    height: calc(22px + .5vh);;
 }
 
 
@@ -166,7 +168,7 @@ h4 {
 .stickyshadow {
     position: fixed;
     top:0px;
-    height:7vh;
+    height:calc(49px + .5vh);
     width: 100%;
     z-index: 2;
     box-shadow: 0px 0px 20px 4px #d1d4d3;
@@ -211,13 +213,14 @@ h4 {
     width:15px;
     height:15px;
     z-index:4;
+    font-weight: 800;
 }
 
 /* ID SPECIFIC */
 #intro {
     background-color:#BB133E;
     text-align:center;
-    padding-top:10vh;
+    padding-top:8vh;
     color: white;
 }
 
@@ -233,14 +236,13 @@ h4 {
 }
 
 #thanks {
-    
+    position: relative;
     background-color:#E8EAE9;
     text-align:center;
-    padding-top:13vh;
+    padding-top:10vh;
     color: black;
-    height:90vh;
+    height:92vh;
     box-sizing: border-box;
-
 }
 
 #shares img {
@@ -309,4 +311,34 @@ h4 {
 
 .modalActive {
     display:block;
+}
+
+
+#myurl {
+    width:400px;
+    padding:5px;
+    border-radius:4px;
+    border:1px solid #d1d4d3;
+}
+
+#myurl2 {
+    width:200px;
+    padding:5px;
+    border-radius:4px;
+    border:1px solid #d1d4d3;
+}
+
+.linkCopied {
+    display:none;
+    margin:30px;
+}
+
+
+#emptrect {
+    height:50vh;
+    width:100vw;
+    margin: 10vh auto;
+    box-shadow: inset 0px 0px 20px 4px #d1d4d3;
+    background-color:#E8EAE9;
+
 }
