--- a/css/page.css
+++ b/css/page.css
@@ -140,7 +140,7 @@ h4 {
 }
 
 
-#menu a {
+#menu .content a {
     border-bottom: 3px solid #d1d4d3;
     border-top: 3px solid #d1d4d3;
     padding: 5px;
@@ -148,13 +148,14 @@ h4 {
     cursor: pointer;
  }
  
-#menu a:hover {
+#menu .content a:hover {
     border-bottom: 3px solid #bb133e;
 }
 
-#menu a.storyPast {
+#menu .content a.storyPast {
     border-top: 3px solid #bb133e;
 }
+
 
 .floaty {
     position: relative;
@@ -173,6 +174,16 @@ h4 {
     z-index: 2;
     box-shadow: 0px 0px 20px 4px #d1d4d3;
 
+}
+
+.corner {
+    position:absolute;
+    top:0px;
+    width:150px;
+    margin:7px;
+}
+.corner img {
+    width:100%;
 }
 
 /* INFOBOXES */
