--- a/css/page.css
+++ b/css/page.css
@@ -15,14 +15,15 @@ body {
 }
 .content {
     position: relative;
-    width:1000px;
+    width:700px;
     margin:auto;
+    line-height: 1.6;
 }
 
 
 .logo {
     width: 150px;
-    margin:20px 50px 20px 50px;
+    margin:0px 50px 0px 50px;
 }
 
 h1 {
@@ -40,7 +41,8 @@ h3{
 
     color:#bb133e;
     text-align: center;
-    margin:0px;
+    margin:30px;
+    padding-bottom: 10vh;
 }
 
 h4 {
@@ -88,7 +90,6 @@ h4 {
     opacity:1;
     top:0;
 }
-
 .fullscreen {
     width:100vw;
     height:100vh;
@@ -112,13 +113,34 @@ h4 {
     margin:auto;
     z-index: 3;
     background-color: white;
-    padding-top:10vh;
-    padding-bottom:10vh;
     /* border-bottom:2px solid #d1d4d3;
     border-top:2px solid #d1d4d3; */
 
     box-shadow: 0px 0px 20px 4px #d1d4d3;
     /* border-top:15px solid #d1d4d3; */
+}
+
+.flowtext {
+    padding-top:15vh;
+    padding-bottom:20vh;
+}
+
+.flowtitle {
+    padding-top:10vh;
+    padding-bottom:10;
+}
+
+.flow p {
+    margin:30px;
+}
+
+
+#emptrect {
+    height:25vh;
+    width:100vw;
+    margin: 10vh auto;
+    box-shadow: inset 0px 0px 20px 4px #d1d4d3;
+    background-color:#E8EAE9;
 
 }
 
@@ -127,7 +149,7 @@ h4 {
     padding-top:15px;
     z-index: 5;
     width:100%;
-    height:calc(22px + .5vh);
+    height:5vh;
     background-color:white;
     /* box-shadow: 0px 0px 20px 4px #d1d4d3; */
 
@@ -136,7 +158,7 @@ h4 {
     display:none;
     padding-top:15px;
     width: 100%;
-    height: calc(22px + .5vh);;
+    height: 5vh;
 }
 
 
@@ -169,7 +191,7 @@ h4 {
 .stickyshadow {
     position: fixed;
     top:0px;
-    height:calc(49px + .5vh);
+    height:6vh;
     width: 100%;
     z-index: 2;
     box-shadow: 0px 0px 20px 4px #d1d4d3;
@@ -211,6 +233,7 @@ h4 {
 
 .whitebox {
     background-color:white;
+    padding:20px;
     width:550px;
     font-size:calc(12px + .5vh); 
 }
@@ -231,8 +254,9 @@ h4 {
 #intro {
     background-color:#BB133E;
     text-align:center;
-    padding-top:8vh;
+    padding-top:5vh;
     color: white;
+    overflow-y:hidden;
 }
 
 #intro h1 {
@@ -241,7 +265,7 @@ h4 {
 
 .arrow {
     cursor: pointer;
-    top: 80vh;
+
     width:50px;
     height:50px;
 }
@@ -345,11 +369,3 @@ h4 {
 }
 
 
-#emptrect {
-    height:50vh;
-    width:100vw;
-    margin: 10vh auto;
-    box-shadow: inset 0px 0px 20px 4px #d1d4d3;
-    background-color:#E8EAE9;
-
-}
