--- a/css/page.css
+++ b/css/page.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Fazeta;
+    src: url(fonts/Fazeta-BlackCaption.woff);
+}
+
 /* GENERAL RULES */
 body {
     margin: 0px;
@@ -28,7 +33,7 @@ body {
 
 h1 {
     font-size: 7vh;
-    /* font-family:Fazeta, Cambria, Georgia, "Times New Roman", serif */
+    /* font-family: Fazeta ;, Cambria, Georgia, "Times New Roman", serif */
     font-weight: 600;
     color: #bb133e;
 }
