--- a/css/page.css
+++ b/css/page.css
@@ -25,6 +25,13 @@ body {
     line-height: 1.6;
 }
 
+.ddlvisible {
+    color:#444;
+}
+
+.ddlunvisible {
+    color:#c6c6c6;
+}
 
 .logo {
     width: 150px;
