--- a/css/chart.css
+++ b/css/chart.css
@@ -69,7 +69,6 @@ div.tooltip {
 }
 .chartcontainer {
     position: relative;
-    width:1000px;
     margin:auto;
 }
 
@@ -92,11 +91,6 @@ div.tooltip {
     text-align: center;
     /* top:-28px; */
 }
-/* 
-.button:hover {
-	background-color: white;
-	color: #DDD;
-} */
 
 .buttonActive {
     background-color: #BB133E;
@@ -135,6 +129,11 @@ div.tooltip {
     padding-top:10vh;
 }
 
+.notes p {
+    line-height: 1.3;
+    font-size: calc(12px + .3vh);
+
+}
 .selected {
 	stroke:black;
 	stroke-width: 2px;
@@ -142,18 +141,6 @@ div.tooltip {
 .unselected {
 	opacity: 0.2;
 }
-
-/* #storyBox {
-    margin-top:50px;
-    top:0%;
-    height:40%;
-	background-color:rgba(127,179,217,.3);
- */
-/* #descBox {
-    top:55%;
-    height:40%;
-    background-color:rgba(221,221,221,.33);
-} */
 
 #helplogo {
     /* position: absolute; */
@@ -165,18 +152,7 @@ div.tooltip {
 #helplogo img {
     margin: 15px;
 }
-/* 
-#rstBtn {
-    position: absolute;
-    display: block;
-    cursor: pointer;
-    width:10%;
-    border:0px;
-    color: #BB133E;
-    text-align: center;
-    left:90%;
-}
- */
+
 #rstBtn:hover{
     font-weight: bold;
 }
