--- a/css/page.css
+++ b/css/page.css
@@ -148,15 +148,6 @@ h4 {
 }
 
 
-#emptrect {
-    height:30px;
-    width:100vw;
-    margin: 10vh auto;
-    box-shadow: inset 0px 0px 20px 4px #d1d4d3;
-    background-color:white;
-
-}
-
 /* MENU */
 #menu {
     padding-top:15px;
@@ -276,6 +267,7 @@ h4 {
 }
 
 .arrow {
+    position: relative;
     cursor: pointer;
     width:50px;
     height:50px;
