--- a/css/page.css
+++ b/css/page.css
@@ -220,14 +220,18 @@ h4 {
 
 /* INFOBOXES */
 .box {
-    top:0px;
     border-radius: 8px;
     padding:15px;
-    position: absolute;
+    position: relative;
     font-size:calc(12px + .2vh); 
     width:400px;
     z-index: 2;
+    margin-bottom: 20px;
     box-shadow: 0px 0px 20px 4px #d1d4d3
+}
+
+#boxes {
+    position: absolute;
 }
 
 .helpbox {
